[package]
name = "pgtool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
indicatif = { version = "0.18.4", features = ["rayon"] }
lexopt = "0.3.2"
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
